# EasyOCR-cpp

./: CMakeLists.txt  OpenvinoExample.cpp  README.md
include/: CRAFT.h  CRNN.h  OpenvinoModel.h
lang/: latin_char.txt
models/: CRAFT-detector.xml  recognition_model.xml  recognition_model_latin.xml
src/: CRAFT.cpp  CRNN.cpp  OpenvinoModel.cpp
